--- a/honig1/index.html
+++ b/honig1/index.html
@@ -45,4 +45,16 @@ a{color:black;}
       <li><a href="../honig2">Honig 2</a></li>
       <li><a href="../honig3">Honig 3</a></li>
     </ul>
-
+ <br/>
+        <img src="https://images.squarespace-cdn.com/content/v1/57092ddaf8baf319177eaf44/1669555032116-2D7NQQ5RJJHK65W9YF7R/lusthonig-bio-landscape.jpg?format=1000w" alt="honig" width="500" height="600" class="lusthonig">
+        <p>Apilarnil ist Drohnenlarvenextrakt der 6-7 Tage alten männlichen Bienenlarven (Drohnen). Es enthält eine Vielzahl von Nährstoffen & <br>
+        männlichen Hormonen und macht unseren Apilarnilhonig dadurch zu einem einzigartigen Produkt.</p>
+        <br>
+        <h2>Geschmack</h2>
+        <p>süßlich, cremig bis seidig, nussig</p>
+        <h2>Empfehlung</h2>
+        <p>2 TL pur, 20-30 Minuten vor einer Mahlzeit, Einnahme nicht nach 18 Uhr und vor dem Schlafengehen. Der Honig sollte im Kühlschrank aufbewahrt werden und wir empfehlen einen Verbrauch innerhalb 3 Monate.</p>
+        <p>Kosten <br> 25€/250g</p>
+ <img src="https://i.imgur.com/QyXscWf.png" class="logo2"; >
+</body>
+</html>
