--- a/honig1/index.html
+++ b/honig1/index.html
@@ -46,6 +46,7 @@ a{color:black;}
       <li><a href="../honig3">Honig 3</a></li>
     </ul>
  <br/>
+</nav>
         <img src="https://images.squarespace-cdn.com/content/v1/57092ddaf8baf319177eaf44/1669555032116-2D7NQQ5RJJHK65W9YF7R/lusthonig-bio-landscape.jpg?format=1000w" alt="honig" width="500" height="600" class="lusthonig">
         <p>Apilarnil ist Drohnenlarvenextrakt der 6-7 Tage alten männlichen Bienenlarven (Drohnen). Es enthält eine Vielzahl von Nährstoffen & <br>
         männlichen Hormonen und macht unseren Apilarnilhonig dadurch zu einem einzigartigen Produkt.</p>
