--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ a{color:black;}
 <p>Kontakt:<br>
 Sumsi Süß GmbH<br>
 Wabenstraße 12<br>
-8010 Graz</p>
+8010 Graz <br/>
+Telefon: 0664/123 456 78</p>
 </body>
 </html>
 
