--- a/honig1/index.html
+++ b/honig1/index.html
@@ -9,7 +9,7 @@ h1{font-family:Ink Free;font-size:90px; text-shadow:2px 2px 2px black; backgroun
 .logo{  padding:5px; object-position: center top;background-color:white;   }
 
 .header{background-image:url("https://i.imgur.com/sdvDmvP.png");text-align:center;background-repeat: no-repeat;background-position:center; background-color: white; background-size:cover; padding:370px;}
-.cremehonig{display: block; margin-left: auto; margin-right: auto; width: 50%; border: solid 2px white; border-radius:40%;margin-top:100px;   }
+.lusthonig{display: block; margin-left: auto; margin-right: auto; width: 50%; border: solid 2px white; border-radius:40%;margin-top:100px;   }
 .mylogo:hover {         transform: scale(1.1); }
 p{font-size:25px; text-align:center;font-family:Palatino Linotype;}
 h2{ font-size:60px;  }
