--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ a{color:black;}
 </head>
 <body>
 	       <div class="logo">
- <a href="../Honig" ><img src="https://cdn.pixabay.com/photo/2015/03/17/08/25/bee-677330_960_720.png" class="mylogo" width="100" height="auto" ></a>
+ <a href="./Honig" ><img src="https://cdn.pixabay.com/photo/2015/03/17/08/25/bee-677330_960_720.png" class="mylogo" width="100" height="auto" ></a>
         </div>
  <header class="header"></header>
 
